streams, overriding, overloading